# epam_llm_bootcamp_embeddings

./: README.md  dockerfile  main.py  pyproject.toml
scripts/: bert_embedding.py  word2vec_embedding.py
