[tool.poetry]
name = "llm-bootcamp-embeddings"
version = "1.0.0"
description = "LLM Bootcamp Embeddings Example"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.1"
transformers = "^4.21.3"
gensim = "^4.1.2"
scikit-learn = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"